# tinzer

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  main.cpp  tinzer_ketchup_house.sln  tinzer_ketchup_house.vcxproj
Study/: Fruit.cpp  Fruit.h  multipleObjectTracking.cpp
app/: Config.h  autolouder.cpp  autolouder.h  config.h
app/LineSensore/: LineSensore.cpp  LineSensore.h
app/api/: Engine.cpp  Engine.h
app/control/: Control.cpp  Control.h
app/grid/: Position.cpp  Position.h
app/hardware/: ev3dev.cpp  ev3dev.h
app/hardware/button/: Button.cpp  Button.h
app/hardware/diode/: Diode.cpp  Diode.h
app/hardware/encoder/: Encoder.cpp  Encoder.h  FakeEncoder.h  encoder.cpp  encoder.h
app/hardware/infraredSensor/: InfraredSensor.cpp  InfraredSensor.h
app/hardware/lightSensor/: lightSensor.cpp  lightSensor.h
app/hardware/motor/: FakeMotor.h  Motor.cpp  Motor.h
app/hardware/motors/: Motor.cpp  Motor.h
app/hardware/reflectiveBar/: ReflectiveBar.cpp  ReflectiveBar.h
app/hardware/ultrasonicSensor/: Ultrasonic.cpp  Ultrasonic.h  UltrasonicSensor.cpp  UltrasonicSensor.h
app/model/ReflectiveBars/: ReflectiveModel.cpp  ReflectiveModel.h
app/model/button/: ButtonsModel.cpp  ButtonsModel.h
app/model/buttons/: ButtonsModel.cpp  ButtonsModel.h
app/model/encoder/: EncodersModel.cpp  EncodersModel.h
app/model/line/: LineModel.cpp  LineModel.h  LinesModel.cpp  LinesModel.h
app/model/ultrasonic/: UltrasonicModel.cpp  UltrasonicModel.h
app/structures/: Coordinates.h  Instruction.h  SensorsArray.h
app/threads/: Boostrap.h  Bootstrap.h  BrainThread.cpp  BrainThread.h  ControlThread.h  Controlthread.h  LogicThread.h  MainThread.h
app/threads/controller/: Controller.cpp  Controller.h
app/threads/controllers/motors/: MotorController.cpp  MotorController.h
app/threads/controls/: EngineControl.cpp  EngineControl.h  EngineStack.h  MotorControl.cpp  MotorControl.h
app/threads/controls/gateControl/: GateControl.cpp  GateControl.h
app/threads/controls/motorControl/: MotorControl.cpp  MotorControl.h
app/threads/logic/: Logic.cpp  Logic.h  LogicThread.cpp  LogicThread.h
app/threads/sensors/: EncoderSensor.cpp  EncoderSensor.h  IEncoder.h  IEncoderCallback.h
app/threads/sensors/buttons/: ButtonsSensor.cpp  ButtonsSensor.h
app/threads/sensors/encoder/: EncodersSensor.cpp  EncodersSensor.h
app/threads/sensors/gateSensor/: GateSensor.cpp  GateSensor.h  IGateSensorCallback.h
app/threads/sensors/motorEncoder/: EncoderSensor.cpp  EncoderSensor.h  IEncoderCallback.h
app/threads/sensors/reflectiveSensorBar/: IReflectiveSensorBarCallback.h  ReflectiveSensorBar.cpp  ReflectiveSensorBar.h
app/threads/sensors/stopButton/: StopButtonSensor.cpp  StopButtonSensor.h
framework/: CLog.cpp  CLog.h  Helpers.cpp  Helpers.h  Log.cpp  Log.h
framework/Helpers/: Helpers.cpp  Helpers.h
framework/control/: AbstractControl.cpp  AbstractControl.h  Stack.cpp  Stack.h
framework/control/engine/: AbstractControl.h
framework/control/motors/: AbstractControl.cpp  AbstractControl.h  AbstractMotor.cpp  AbstractMotor.h
framework/controller/: CoordinateController.cpp  CoordinateController.h
framework/hardware/: EncoderSync.cpp  EncoderSync.h  IButton.h  IDiode.h  IEncoder.h  IEngine.h  ILightSensor.h  IMotor.h  IReflectiveBar.h  IUltrasonicSensor.h
framework/libs/iniReader/: INIReader.cpp  INIReader.h  ini.cpp
framework/loop/: loop.cpp  loop.h
framework/looper/: looper.cpp  looper.h
framework/sensor/: AbstractSensor.cpp  AbstractSensor.h
framework/stopWatch/: StopWatch.h
framework/structures/: Coordinate.h  Instruction.h
framework/threading/: Threading.cpp  Threading.h
